# task-queue

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
docs/: architecture.md  operations.md  setup.md  testing.md  using-the-library.md
examples/demo_service/: handlers.py  producer_main.py  worker_main.py
k8s/: producer-deployment.yaml  reaper-cronjob.yaml  worker-deployment.yaml
migrations/: 003_add_processed_by_worker_id.sql
src/taskqueue/: __init__.py  models.py  notify.py  queue.py  reaper.py  registry.py  worker.py
tests/: conftest.py  test_ack.py  test_e2e.py  test_enqueue.py  test_listen.py  test_nack.py  test_reaper.py  test_registry.py  test_worker.py
